<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="#000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:text="@string/presente_periodo"
        android:background="@drawable/bcg_semestre"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/headerCourseList" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/curso"
            style="@style/headerCourseList"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/credito"
            style="@style/headerCourseList"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/nota"
            style="@style/headerCourseList" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/courseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_avg"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/promedio_final"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtTotalAvg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="12"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:shadowColor="@color/White"
            android:shadowRadius="20"
            android:shadowDx="0"
            android:shadowDy="0" />

    </LinearLayout>


</LinearLayout>