<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#cdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/curso"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtCourseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="18sp"
                tools:text="Maths" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/creditos"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtCourseCredit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                tools:text="12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="100dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/indicador"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="80dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/peso"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="80dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/nota"
                android:textSize="18sp" />

        </LinearLayout>

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.hacaller.qualificator.CourseInputView
            android:id="@+id/input7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center"
            android:background="@color/tNavy"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/promedio"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnMeanDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ImageLeft" />

            <TextView
                android:id="@+id/txtCursoPromedio"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="12"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnMeanUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ImageRight" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSaveCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_green"
            android:text="@string/guardar"
            android:textColor="@color/Black"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>
